--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 
 @import "home";
 @import "knowing_how";
+@import "devise";
 
 html,
 body {
@@ -24,7 +25,7 @@ body {
 
 .div_center {
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - 100px);
   display: flex;
   flex-direction: row;
   justify-content: center;
