feature/Setting initial page and main topics

--- a/app/views/business_type/services.html.erb
+++ b/app/views/business_type/services.html.erb
@@ -1,8 +1,7 @@
 <div class="div_center">
     <div class="business_type">
         <div class="container">
-            <h4>Bom, agora precisamos nos conhecer melhor!</h4>
-            <h4>Qual é o Tipo do seu Negócio?</h4>
+            <h4>Qual é o Tipo do seu Negócio?!</h4>
 
             <hr />
 
