--- a/app/views/knowing_how/index.html.erb
+++ b/app/views/knowing_how/index.html.erb
@@ -11,13 +11,14 @@
 
             <p>
                 Com o início da pandemia e a necessidade de <b>lockdown</b>, muitos negócios vieram a fechar e/ou
-                terem grandes prejuízos, já que o conceito de comércio sempre se inclinou às vendas físicas e mais pessoais.
+                terem grandes prejuízos, já que o conceito de comércio sempre se inclinou às vendas físicas e/ou mais pessoais.
             </p>
 
             <p>
                 Já sabemos que a internet está aí, e existem várias ferramentas para potencializar o seu negócio, mas
                 o problema principal é: <br />
-                <b>Como utilizá-las?</b>
+                <b>Como utilizá-las?</b> <br />
+                <b>E qual se adequaria melhor ao seu negócio?</b>
             </p>
 
             <p>
