--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+
 @import "bootstrap/scss/bootstrap";
+@import "select2";
 @import "devise";
 
 @import "home";
 @import "knowing_how";
+@import "initial_guide";
 
 @import "shared/lateral_menu";
 
