--- a/app/assets/stylesheets/knowing_how.scss
+++ b/app/assets/stylesheets/knowing_how.scss
@@ -25,4 +25,22 @@
         box-shadow: 0px 0px 15px rgba(10,10,10,0.5);
         padding: 15px 30px;
     }
+
+    .task {
+        .row {
+            margin-top: 10px!important;
+        }
+
+        h4, a {
+            display: inline-block;
+        }
+
+        a {
+            padding: 5px 10px;
+        }
+
+        a:hover {
+            padding: 5px 20px;
+        }
+    }
 }
