--- a/app/views/knowing_how/index.html.erb
+++ b/app/views/knowing_how/index.html.erb
@@ -1,28 +1,12 @@
 <div class="div_center">
     <div class="knowing_how">
         <div class="container">
-            <h4>Primeiramente, seja muito bem vindo(a).</h4>
+            <h4>Sobre.</h4>
 
             <hr />
 
             <p>
                 Esse é o passo a passo para fazer sua empresa decolar no <b>mercado digital</b>.
-            </p>
-
-            <p>
-                Com o início da pandemia e a necessidade de <b>lockdown</b>, muitos negócios vieram a fechar e/ou
-                terem grandes prejuízos, já que o conceito de comércio sempre se inclinou às vendas físicas e/ou mais pessoais.
-            </p>
-
-            <p>
-                Já sabemos que a internet está aí, e existem várias ferramentas para potencializar o seu negócio, mas
-                o problema principal é: <br />
-                <b>Como utilizá-las?</b> <br />
-                <b>E qual se adequaria melhor ao seu negócio?</b>
-            </p>
-
-            <p>
-                Aqui você terá todo o <b>passo a passo</b> para digitalizar seu negócio, e enfim colocá-lo <b>online</b>.
             </p>
 
             <hr />
