--- a/app/views/my_public/index.html.erb
+++ b/app/views/my_public/index.html.erb
@@ -1,6 +1,6 @@
 <%= javascript_pack_tag 'search' %>
 
-<div class="div_center mt-4">
+<div class="mt-4">
     <div class="knowing_how">
         <div class="container">
             <h4>Conhecendo seu Público.</h4>
