Feature: Setting target public search page

--- a/app/views/home/_logged.html.erb
+++ b/app/views/home/_logged.html.erb
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-8">
+                    <div class="col-8 <%= current_user.responded_public && 'responded' %>">
                         <h4>3º. Conhecendo seu público.</h4>
                     </div>
 
