--- a/app/views/initial_guide/facebook.html.erb
+++ b/app/views/initial_guide/facebook.html.erb
@@ -43,6 +43,8 @@
                 Para isso, acesse esse <a href="https://www.mlabs.com.br/blog/tutorial-saiba-como-criar-uma-pagina-no-facebook/"><b>passo a passo completo.</b></a>
             </p>
 
+            <iframe width="560" height="315" class="container" src="https://www.youtube.com/embed/zN013WkCAv0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
             <hr />
 
             <small>(Para ir para o próximo passo é necessário finalizar sua página pelo <a href="https://www.mlabs.com.br/blog/tutorial-saiba-como-criar-uma-pagina-no-facebook/"><b>passo a passo</b></a>)</small> <br />
