--- a/app/views/initial_guide/instagram.html.erb
+++ b/app/views/initial_guide/instagram.html.erb
@@ -33,6 +33,8 @@
                 super dicas de como movimentar seu negócio por lá!
             </p>
 
+            <iframe width="560" height="315" class="container" src="https://www.youtube.com/embed/K6pS9vJSBPs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
             <p>
                 <b>E tudo isso DE GRAÇA!</b>
             </p>
