--- a/app/views/initial_guide/linkedin.html.erb
+++ b/app/views/initial_guide/linkedin.html.erb
@@ -40,6 +40,8 @@
                 <b>E aí?! Vamos nessa criar sua página no LinkedIn?</b>
             </p>
 
+            <iframe width="560" height="315" class="container" src="https://www.youtube.com/embed/-lQmjGefw8U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
             <hr />
 
             <small>(Para ir para o próximo passo é necessário finalizar sua conta no linkedIn consultando o <a href="https://kinsta.com/pt/blog/como-criar-uma-pagina-de-empresa-no-linkedin/">passo a passo</a>)</small> <br />
