--- a/app/views/initial_guide/youtube.html.erb
+++ b/app/views/initial_guide/youtube.html.erb
@@ -32,6 +32,8 @@
                 Bom, você pode aprender a criar um canal para o seu negócio <a href="https://support.google.com/youtube/answer/1646861?hl=pt-BR">clicando aqui</a>.
             </p>
 
+            <iframe width="560" height="315" class="container" src="https://www.youtube.com/embed/oYyHdmD8G4o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
             <hr />
 
             <small>(Para ir para o próximo passo é necessário finalizar sua conta no youtube consultando o <a href="https://support.google.com/youtube/answer/1646861?hl=pt-BR">passo a passo</a>)</small> <br />
