--- a/app/views/home/_unlogged.html.erb
+++ b/app/views/home/_unlogged.html.erb
@@ -4,7 +4,7 @@
             Seu negócio na internet <b>HOJE</b>
 
             <br />
-            <%= link_to 'Saiba Como', knowing_how_index_path, class: 'button' %>
+            <%= link_to 'Saiba Como', knowing_how_path, class: 'button' %>
         </div>
     </div>
 
