--- a/app/views/initial_guide/about_social_media.html.erb
+++ b/app/views/initial_guide/about_social_media.html.erb
@@ -36,11 +36,11 @@
 
             <hr />
             
-            <%= link_to 'Prosseguir', facebook_index_url, class: 'btn btn-primary' %>
+            <%= link_to 'Prosseguir', facebook_url, class: 'btn btn-primary' %>
 
             <hr />
 
-            <%= link_to 'Voltar', about_internet_index_path, class: 'btn btn-warning' %>
+            <%= link_to 'Voltar', about_internet_path, class: 'btn btn-warning' %>
         </div>
     </div>
 </div>
