--- a/app/views/initial_guide/facebook.html.erb
+++ b/app/views/initial_guide/facebook.html.erb
@@ -59,7 +59,7 @@
             <% if current_user.created_facebook_page %>
                 <hr />
 
-                <%= link_to 'Prosseguir', instagram_index_url, class: 'btn btn-primary' %>
+                <%= link_to 'Prosseguir', instagram_url, class: 'btn btn-primary' %>
             <% end %>
 
             <hr />
