--- a/app/views/initial_guide/index.html.erb
+++ b/app/views/initial_guide/index.html.erb
@@ -27,7 +27,7 @@
 
             <hr />
 
-            <%= link_to 'Prosseguir', about_internet_index_path, class: 'btn btn-primary' %>
+            <%= link_to 'Prosseguir', about_internet_path, class: 'btn btn-primary' %>
 
             <hr />
 
