--- a/app/views/initial_guide/instagram.html.erb
+++ b/app/views/initial_guide/instagram.html.erb
@@ -57,12 +57,12 @@
             <% if current_user.created_instagram_page %>
                 <hr />
 
-                <%= link_to 'Prosseguir', youtube_index_url, class: 'btn btn-primary' %>
+                <%= link_to 'Prosseguir', youtube_url, class: 'btn btn-primary' %>
             <% end %>
 
             <hr />
 
-            <%= link_to 'Voltar', facebook_index_path, class: 'btn btn-warning' %>
+            <%= link_to 'Voltar', facebook_path, class: 'btn btn-warning' %>
         </div>
     </div>
 </div>
