--- a/app/views/initial_guide/linkedin.html.erb
+++ b/app/views/initial_guide/linkedin.html.erb
@@ -61,7 +61,7 @@
 
             <hr />
 
-            <%= link_to 'Voltar', instagram_index_path, class: 'btn btn-warning' %>
+            <%= link_to 'Voltar', instagram_path, class: 'btn btn-warning' %>
         </div>
     </div>
 </div>
