--- a/app/views/initial_guide/youtube.html.erb
+++ b/app/views/initial_guide/youtube.html.erb
@@ -48,12 +48,12 @@
             <% if current_user.created_youtube_page %>
                 <hr />
 
-                <%= link_to 'Prosseguir', linkedin_index_url, class: 'btn btn-primary' %>
+                <%= link_to 'Prosseguir', linkedin_url, class: 'btn btn-primary' %>
             <% end %>
 
             <hr />
 
-            <%= link_to 'Voltar', instagram_index_path, class: 'btn btn-warning' %>
+            <%= link_to 'Voltar', instagram_path, class: 'btn btn-warning' %>
         </div>
     </div>
 </div>
