--- a/app/views/knowing_how/index.html.erb
+++ b/app/views/knowing_how/index.html.erb
@@ -11,7 +11,7 @@
 
             <hr />
 
-            <%= link_to 'Avançar', business_type_index_path, class: 'button' %>
+            <%= link_to 'Avançar', business_type_path, class: 'button' %>
         </div>
     </div>
 </div>
