--- a/app/views/initial_guide/about_internet.html.erb
+++ b/app/views/initial_guide/about_internet.html.erb
@@ -26,7 +26,7 @@
 
             <hr />
 
-            <%= link_to 'Voltar', initial_guide_index_path, class: 'btn btn-warning' %>
+            <%= link_to 'Voltar', initial_guide_path, class: 'btn btn-warning' %>
         </div>
     </div>
 </div>
