--- a/app/views/my_public/final.html.erb
+++ b/app/views/my_public/final.html.erb
@@ -28,7 +28,7 @@
 
             <hr />
 
-            <%= link_to 'Voltar', my_public_index_url, class: 'btn btn-warning' %>
+            <%= link_to 'Voltar', my_public_url, class: 'btn btn-warning' %>
         </div>
     </div>
 </div>
