--- a/app/assets/stylesheets/shared/lateral_menu.scss
+++ b/app/assets/stylesheets/shared/lateral_menu.scss
@@ -10,4 +10,12 @@
         width: 100px;
         border-radius: 100%;
     }
+
+    .selos {
+        img {
+            width: 100px;
+            height: 100px;
+            border-radius: 100%;
+        }
+    }
 }
