Setting readme images

--- a/app/assets/stylesheets/my_public.scss
+++ b/app/assets/stylesheets/my_public.scss
@@ -1,3 +1,4 @@
-// Place all the styles related to the my_public controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
+    border: none!important;
+    background: #e4e4e4!important;
+}
